--- a/index.htm
+++ b/index.htm
@@ -284,17 +284,9 @@
       <footer>
         <i class="mdi mdi-chevron-double-up page-link" dest="home"></i>
 
-        <div class="icon-wrap flex row">
-          <a href="https://www.linkedin.com/in/kamil-wiktorowski/">
-            <div class="flex icon" id="icon-2">
-              <i class="mdi mdi-linkedin"></i>
-            </div>
-          </a>
-          <a href="https://www.facebook.com/wiktorowski.dev">
-            <div class="flex icon" id="icon-3">
-              <i class="mdi mdi-facebook"></i>
-            </div>
-          </a>
+        <div class="icon-wrap flex row" id="footer-links">
+
+
         </div>
         <div class="info-box">
           <div class="footnote">
