--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 
       gtag('config', 'G-0EKKB980PT');
     </script>
-    <title></title>
+    <title>Kamil Wiktorowski | wiktorowski.dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 	<style>/* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; }
     /* ---- particles.js container ---- */
