--- a/index.htm
+++ b/index.htm
@@ -185,7 +185,7 @@
           </div>
 
           <div class="skills-wrapper flex row-gt-sm">
-            <div class="flex flex-50-gt-sm waypoint" data-animation="slide-in-left">
+            <div id="me-photo-container" class="flex flex-50-gt-sm waypoint" data-animation="slide-in-left">
               <img src="img/me.png" class="me">
               <!-- <div><img class="up-arrow" src="img/up-arrow.png"></div> -->
               <div class="label bold">Who's this guy?</div>
