--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
     <!-- LOCAL -->
     <link rel="stylesheet" href="style/style.css">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
-
+    <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>
     <!-- HOSTED -->
     <script src="ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script src="ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -59,6 +59,8 @@
     <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=1326468791045571&ev=PageView&noscript=1"
     /></noscript>
+
+
   <!-- End Facebook Pixel Code -->
   </head>
   <body>
@@ -320,6 +322,11 @@
       var count_particles, stats, update;
       count_particles = document.querySelector('.js-count-particles');
     </script>
+
+    <script src=”https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js” integrity=”sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo” crossorigin=”anonymous”></script>
+
+<script src=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js” integrity=”sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/” crossorigin=”anonymous”></script>
+
   </body>
 </html>
 
