--- a/index.htm
+++ b/index.htm
@@ -137,7 +137,7 @@
                 </div>
                 <div class="waypoint" data-animation="fade-in">
                   <div class="label bold">Always on time</div>
-                  <div>
+                  <div class="about-me-text">
                     Creating scripts which are always finished,
                     before the deadline.
                   </div>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="waypoint" data-animation="fade-in" data-delay=".2s">
                   <div class="label bold">Security</div>
-                  <div>Your data are placed on encrypted storage.</div>
+                  <div class="about-me-text">Your data are placed on encrypted storage.</div>
                 </div>
               </div>
             </div>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="waypoint" data-animation="fade-in" data-delay=".4s">
                   <div class="label bold">Quality</div>
-                  <div>The data are created with the highest possible quality.</div>
+                  <div class="about-me-text">The data are created with the highest possible quality.</div>
                 </div>
               </div>
 
@@ -177,7 +177,7 @@
                 </div>
                 <div class="waypoint" data-animation="fade-in" data-delay=".6s">
                   <div class="label bold">Copyrights</div>
-                  <div>
+                  <div class="about-me-text">
                     After completing the work,
                     all copyrights belongs to you.
                   </div>
