--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     <!-- LOCAL -->
     <link href="style/style.css" rel="stylesheet">
+    <link href="style/media_style.css" rel="stylesheet">
+    <link href="style/keyframes_style.css" rel="stylesheet">
+    <link href="style/font-face_style.css" rel="stylesheet">
     <link href='favicon.ico' rel='shortcut icon' type='image/x-icon'>
     <link crossorigin=”anonymous” href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” rel=”stylesheet”>
     <!-- HOSTED -->
@@ -44,7 +47,7 @@
     <script src="scripts/dynamic_loaders.js"></script>
     <script src="scripts/pt.min.js"></script>
     <!-- Facebook Pixel Code -->
-  <script>
+    <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
