--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <link href="style/media_style.css" rel="stylesheet">
     <link href="style/keyframes_style.css" rel="stylesheet">
     <link href="style/font-face_style.css" rel="stylesheet">
+    <link href="style/main_page-sections/section-1.css" rel="stylesheet">
+    <link href="style/main_page-sections/section-2.css" rel="stylesheet">
+    <link href="style/main_page-sections/section-3.css" rel="stylesheet">
+    <link href="style/main_page-sections/section-4.css" rel="stylesheet">
+    <link href="style/main_page-sections/section-5.css" rel="stylesheet">
+    <link href="style/main_page-sections/section-6.css" rel="stylesheet">
     <link href='favicon.ico' rel='shortcut icon' type='image/x-icon'>
     <link crossorigin=”anonymous” href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” rel=”stylesheet”>
     <!-- HOSTED -->
@@ -95,7 +101,7 @@
         </div>
       </div>
 
-      <section class="flex height-fix" id="home">
+      <section class="flex height-fix section-1" id="home">
         <div id="particles-js"></div>
         <div class="flex">
           <div class="text">
@@ -123,7 +129,7 @@
       </section>
 
       <!-- ABOUT -->
-      <section id="about">
+      <section class="section-2" id="about">
         <div class="container flex">
           <div class="header waypoint" data-animation="slide-in-left">
             ABOUT
@@ -209,7 +215,7 @@ My main interest is automatization/simplification of things.
       </section>
 
       <!-- PORTFOLIO -->
-      <section class="flex" id="projects">
+      <section class="flex section-3" id="projects">
         <div class="header waypoint" data-animation="slide-in-right">
           PROJECTS
         </div>
@@ -231,7 +237,7 @@ My main interest is automatization/simplification of things.
       </section>
 
       <!-- BLOG -->
-      <section id="blog">
+      <section class="even section-4" id="blog">
         <div class="container flex">
           <div class="header waypoint" data-animation="slide-in-left">BLOG</div>
           <div class="header-bar waypoint" data-animation="slide-in-left" data-delay=".5s"></div>
@@ -245,7 +251,7 @@ My main interest is automatization/simplification of things.
       </section>
 
       <!-- SERVICES -->
-      <section id="services">
+      <section class="odd section-5" id="services">
         <div class="container flex">
           <div class="header waypoint" data-animation="slide-in-right">SERVICES</div>
           <div class="header-bar waypoint" data-animation="slide-in-right" data-delay=".5s"></div>
@@ -261,7 +267,7 @@ My main interest is automatization/simplification of things.
       </section>
 
       <!-- CONTACT -->
-      <section id="contact">
+      <section class="even section-6" id="contact">
         <svg class="svgcolor-light" height="75" preserveaspectratio="none" version="1.1" viewbox="0 0 100 102" width="100%" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 0 L50 100 L100 0 Z" fill="#f5f5f5" stroke="white"></path>
         </svg>
