New feature ~ infinite horizontal slider Implementing all necessary code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+          <script data-name="static-context">Static = window.Static || {};
+    Static.SQUARESPACE_CONTEXT = {
+    };</script>
+
+    <link rel="stylesheet" type="text/css"
+          href="static/site.css?&filterFeatures=false">
+    <link rel="stylesheet" type="text/css" href="static/my.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EKKB980PT"></script>
     <script>
@@ -203,6 +210,7 @@
               <div class="about-me-text">
                 I am a software developer with experience in backend development, automation, and Machine Learning/Artificial Intelligence.
 My main interest is automatization/simplification of things.
+                  <span class="page-link highlight" dest="contact">Let's make something special.</span>
               </div>
             </div>
 
@@ -237,16 +245,129 @@ My main interest is automatization/simplification of things.
       </section>
 
       <!-- BLOG -->
-      <section class="even section-4" id="blog">
-        <div class="container flex">
+      <section class="even section-4" id="blog" style="padding: 70px 0 0 0; max-height: 875px">
+        <div class="container flex" style="max-width: 100%; padding: 0;">
           <div class="header waypoint" data-animation="slide-in-left">BLOG</div>
-          <div class="header-bar waypoint" data-animation="slide-in-left" data-delay=".5s"></div>
+          <div class="header-bar waypoint" data-animation="slide-in-left" data-delay=".5s" style="margin-bottom: 0"></div>
 
-          <div class="flex row wrap">
-            <div class="flex row-gt-sm" id="blog_source">
+<!--          <div class="flex row wrap">-->
+<!--            <div class="flex row-gt-sm" id="blog_source">-->
 
-            </div>
-          </div>
+<!--            </div>-->
+<!--          </div>-->
+
+            <div id="siteWrapper" class="clearfix site-wrapper">
+        <div id="page-content" class="gf-home" data-controller="Home">
+
+
+
+                <div class="HomeProjects" data-controller="HomeProjects">
+                    <div class="HomeProjects-wrapper">
+                        <div class="HomeProjects-display">
+                            <div class="HomeProjects-size"></div>
+
+
+
+                            <a class="HomeProjects-item blog-wrap" href="https://wiktorowski-dev.medium.com/sentiment-analysis-data-processing-part-1-c4387a8f3bc2">
+                                <div class="HomeProjects-item-display">
+                                    <div class="HomeProjects-item-image" role="figure">
+                                        <img data-src="https://miro.medium.com/max/2160/1*vkUG1jzB8ObVYlsZQpR25w.jpeg"
+                                             data-image="https://miro.medium.com/max/2160/1*vkUG1jzB8ObVYlsZQpR25w.jpeg"
+                                             data-image-dimensions="2500x3125"
+                                             data-image-focal-point="0.507499098777771,0.6101757884025574"
+                                             alt="Fjallraven" data-load="false">
+                                    </div>
+                                    <div class="HomeProjects-item-caption">
+                                        <span class="HomeProjects-item-caption-index" data-index="1"></span>
+                                        <span class="HomeProjects-item-caption-title">Sentiment Analysis, data processing</span>
+                                    </div>
+                                </div>
+                            </a>
+
+
+
+                            <a class="HomeProjects-item blog-wrap" href="https://medium.com/swlh/python-can-be-faster-than-c-2372c627068">
+                                <div class="HomeProjects-item-display">
+                                    <div class="HomeProjects-item-image" role="figure">
+                                        <img data-src="https://miro.medium.com/max/770/0*O-9uMKQAoldEFcg1"
+                                             data-image="https://miro.medium.com/max/770/0*O-9uMKQAoldEFcg1"
+                                             data-image-dimensions="2500x3536" data-image-focal-point="0.5,0.5"
+                                             alt="Iceland" data-load="false">
+                                    </div>
+                                    <div class="HomeProjects-item-caption">
+                                        <span class="HomeProjects-item-caption-index" data-index="5"></span>
+                                        <span class="HomeProjects-item-caption-title">Python Can Be Faster Than C++</span>
+                                    </div>
+                                </div>
+                            </a>
+
+                            <a class="HomeProjects-item blog-wrap" href="https://betterprogramming.pub/exploring-map-vs-starmap-in-python-6bcf32f5fa4a">
+                                <div class="HomeProjects-item-display">
+                                    <div class="HomeProjects-item-image" role="figure">
+                                        <img data-src="https://miro.medium.com/max/700/1*Mi_KFhM0c2M6bwQd-QYEOg.jpeg"
+                                             data-image="https://miro.medium.com/max/700/1*Mi_KFhM0c2M6bwQd-QYEOg.jpeg"
+                                             data-image-dimensions="2500x3536" data-image-focal-point="0.5,0.5"
+                                             alt="Iceland" data-load="false">
+                                    </div>
+                                    <div class="HomeProjects-item-caption">
+                                        <span class="HomeProjects-item-caption-index" data-index="5"></span>
+                                        <span class="HomeProjects-item-caption-title">Exploring Map() vs. Starmap() in Python</span>
+                                    </div>
+                                </div>
+                            </a>
+
+                            <a class="HomeProjects-item blog-wrap" href="https://betterprogramming.pub/thirty-two-advanced-techniques-for-better-python-code-6717226eb611">
+                                <div class="HomeProjects-item-display">
+                                    <div class="HomeProjects-item-image" role="figure">
+                                        <img data-src="https://miro.medium.com/max/700/1*_sydRtY-DM559T3L5cpyKg.jpeg"
+                                             data-image="https://miro.medium.com/max/700/1*_sydRtY-DM559T3L5cpyKg.jpeg"
+                                             data-image-dimensions="2500x3536" data-image-focal-point="0.5,0.5"
+                                             alt="Iceland" data-load="false">
+                                    </div>
+                                    <div class="HomeProjects-item-caption">
+                                        <span class="HomeProjects-item-caption-index" data-index="5"></span>
+                                        <span class="HomeProjects-item-caption-title">32 Advanced Techniques for Better Python Code</span>
+                                    </div>
+                                </div>
+                            </a>
+
+
+
+
+
+
+
+
+
+
+
+                        </div>
+                        <div class="HomeProjects-footer">
+                            <div class="HomeProjects-footer-display">
+                                <div class="HomeProjects-footer-content">
+                                    <div class="HomeLink-wrapper">
+                                        <a class="HomeLink" href="https://wiktorowski-dev.medium.com/" target="_blank">
+
+                <span class="HomeLink-title">
+                    <span><span>My blog</span></span>
+                  </span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+        </div>
+
+</div>
+
+
+
         </div>
       </section>
 
@@ -276,8 +397,9 @@ My main interest is automatization/simplification of things.
             CONTACT
           </div>
           <div class="header-bar waypoint" data-animation="slide-in-right" data-delay=".25s"></div>
-          <div class="highlight waypoint" data-animation="slide-in-right" data-delay=".5s">
-            Have a question or want to work together?
+          <div class="highlight waypoint about-me-text" data-animation="slide-in-right" data-delay=".5s">
+            Have a question or want to work together? <br>
+              wiktorowski.dev@gmail.com
           </div>
           <form class="waypoint" data-animation="pop-in" data-delay=".5s" id="contact-form">
             <input name="name" placeholder="Name" required="" type="text">
@@ -307,6 +429,16 @@ My main interest is automatization/simplification of things.
         </div>
       </footer>
     </div>
+
+
+    <script defer="defer" src="static/home.js"
+                        type="text/javascript"></script>
+
+    <script defer="defer" src="static/site-bundle.js"
+            type="text/javascript"></script>
+
+    <script defer="defer" src="static/site-common.js"
+            type="text/javascript"></script>
 
     <script >window.onload = function(){
       $.getScript("scripts/modal.js");
