Style changes - New features for on hover 'my blog' - Project tiles line height

--- a/index.html
+++ b/index.html
@@ -349,7 +349,11 @@ My main interest is automatization/simplification of things.
                                         <a class="HomeLink" href="https://wiktorowski-dev.medium.com/" target="_blank">
 
                 <span class="HomeLink-title">
-                    <span><span>My blog</span></span>
+                    <span class="arrow-span">
+
+                    <div class="mdi mdi-arrow-right blog-arrow"></div>
+                    <span>My blog</span>
+                    </span>
                   </span>
                                         </a>
                                     </div>
