Style changes - Responsive adjusting for the 'My blog' button and Blog section

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ My main interest is automatization/simplification of things.
       </section>
 
       <!-- BLOG -->
-      <section class="even section-4" id="blog" style="padding: 70px 0 0 0; max-height: 875px">
+      <section class="even section-4" id="blog" style="padding: 70px 0 0 0">
         <div class="container flex" style="max-width: 100%; padding: 0;">
           <div class="header waypoint" data-animation="slide-in-left">BLOG</div>
           <div class="header-bar waypoint" data-animation="slide-in-left" data-delay=".5s" style="margin-bottom: 0"></div>
