Size normalization for the horizontal slider
- New card like look
- Connection with dynamic loader

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     Static.SQUARESPACE_CONTEXT = {
     };</script>
 
-    <link rel="stylesheet" type="text/css"
-          href="static/site.css?&filterFeatures=false">
+<!--    <link rel="stylesheet" type="text/css"-->
+<!--          href="static/site.css?&filterFeatures=false">-->
     <link rel="stylesheet" type="text/css" href="static/my.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EKKB980PT"></script>
@@ -39,6 +39,7 @@
 
     <!-- LOCAL -->
     <link href="style/style.css" rel="stylesheet">
+    <link href="style/blog-tile.css" rel="stylesheet">
     <link href="style/media_style.css" rel="stylesheet">
     <link href="style/keyframes_style.css" rel="stylesheet">
     <link href="style/font-face_style.css" rel="stylesheet">
@@ -266,72 +267,24 @@ My main interest is automatization/simplification of things.
                         <div class="HomeProjects-display">
                             <div class="HomeProjects-size"></div>
 
-
-
-                            <a class="HomeProjects-item blog-wrap" href="https://wiktorowski-dev.medium.com/sentiment-analysis-data-processing-part-1-c4387a8f3bc2">
+                            <a class="HomeProjects-item blog-wrap" href="">
                                 <div class="HomeProjects-item-display">
                                     <div class="HomeProjects-item-image" role="figure">
-                                        <img data-src="https://miro.medium.com/max/2160/1*vkUG1jzB8ObVYlsZQpR25w.jpeg"
-                                             data-image="https://miro.medium.com/max/2160/1*vkUG1jzB8ObVYlsZQpR25w.jpeg"
-                                             data-image-dimensions="2500x3125"
-                                             data-image-focal-point="0.507499098777771,0.6101757884025574"
-                                             alt="Fjallraven" data-load="false">
+                                        <img data-src=""
+                                             data-image=""
+                                             data-image-dimensions="2500x3536" data-image-focal-point="0.5,0.5"
+                                             alt="" data-load="false">
                                     </div>
                                     <div class="HomeProjects-item-caption">
                                         <span class="HomeProjects-item-caption-index" data-index="1"></span>
-                                        <span class="HomeProjects-item-caption-title">Sentiment Analysis, data processing</span>
+                                        <span class="HomeProjects-item-caption-title"></span>
+                                        <span class="HomeProjects-item-caption-date"></span>
+                                        <div class="bar"></div>
+                                        <span class="HomeProjects-item-caption-description"></span>
+<!--                                        <div class="HomeProjects-item-button">LEARN MORE</div>-->
                                     </div>
                                 </div>
                             </a>
-
-
-
-                            <a class="HomeProjects-item blog-wrap" href="https://medium.com/swlh/python-can-be-faster-than-c-2372c627068">
-                                <div class="HomeProjects-item-display">
-                                    <div class="HomeProjects-item-image" role="figure">
-                                        <img data-src="https://miro.medium.com/max/770/0*O-9uMKQAoldEFcg1"
-                                             data-image="https://miro.medium.com/max/770/0*O-9uMKQAoldEFcg1"
-                                             data-image-dimensions="2500x3536" data-image-focal-point="0.5,0.5"
-                                             alt="Iceland" data-load="false">
-                                    </div>
-                                    <div class="HomeProjects-item-caption">
-                                        <span class="HomeProjects-item-caption-index" data-index="5"></span>
-                                        <span class="HomeProjects-item-caption-title">Python Can Be Faster Than C++</span>
-                                    </div>
-                                </div>
-                            </a>
-
-                            <a class="HomeProjects-item blog-wrap" href="https://betterprogramming.pub/exploring-map-vs-starmap-in-python-6bcf32f5fa4a">
-                                <div class="HomeProjects-item-display">
-                                    <div class="HomeProjects-item-image" role="figure">
-                                        <img data-src="https://miro.medium.com/max/700/1*Mi_KFhM0c2M6bwQd-QYEOg.jpeg"
-                                             data-image="https://miro.medium.com/max/700/1*Mi_KFhM0c2M6bwQd-QYEOg.jpeg"
-                                             data-image-dimensions="2500x3536" data-image-focal-point="0.5,0.5"
-                                             alt="Iceland" data-load="false">
-                                    </div>
-                                    <div class="HomeProjects-item-caption">
-                                        <span class="HomeProjects-item-caption-index" data-index="5"></span>
-                                        <span class="HomeProjects-item-caption-title">Exploring Map() vs. Starmap() in Python</span>
-                                    </div>
-                                </div>
-                            </a>
-
-                            <a class="HomeProjects-item blog-wrap" href="https://betterprogramming.pub/thirty-two-advanced-techniques-for-better-python-code-6717226eb611">
-                                <div class="HomeProjects-item-display">
-                                    <div class="HomeProjects-item-image" role="figure">
-                                        <img data-src="https://miro.medium.com/max/700/1*_sydRtY-DM559T3L5cpyKg.jpeg"
-                                             data-image="https://miro.medium.com/max/700/1*_sydRtY-DM559T3L5cpyKg.jpeg"
-                                             data-image-dimensions="2500x3536" data-image-focal-point="0.5,0.5"
-                                             alt="Iceland" data-load="false">
-                                    </div>
-                                    <div class="HomeProjects-item-caption">
-                                        <span class="HomeProjects-item-caption-index" data-index="5"></span>
-                                        <span class="HomeProjects-item-caption-title">32 Advanced Techniques for Better Python Code</span>
-                                    </div>
-                                </div>
-                            </a>
-
-
 
 
 
