Centralizing the arrow 'view my work'

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
           </div>
 
           <div class="button page-link" dest="about">
-            View my work <i class="mdi mdi-arrow-right"></i>
+              <span>View my work</span>
+              <i class="mdi mdi-arrow-right"></i>
           </div>
 
           <nav class="flex">
